--- a/charts/admission-controller/values.yaml
+++ b/charts/admission-controller/values.yaml
@@ -4,7 +4,7 @@ webhook:
   name: webhook
   image:
     repository: scribesecuriy.jfrog.io/scribe-docker-public-local/valint
-    version: v0.0.27-12
+    version: v0.0.27-13-admission
     pullPolicy: IfNotPresent
   env: {}
   extraArgs:
