--- a/charts/admission-controller/Chart.yaml
+++ b/charts/admission-controller/Chart.yaml
@@ -9,7 +9,7 @@ sources:
 type: application
 
 name: admission-controller
-version: 0.0.27
+version: 0.0.27-13
 appVersion: 0.0.27-13
 
 maintainers:
