--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,8 +3,8 @@ name: release
 
 on:
   push:
-    branches:
-      - master
+    # branches:
+    #   - master
     tags:
       - "*"
   workflow_dispatch:
