--- a/charts/admission-controller/Chart.yaml
+++ b/charts/admission-controller/Chart.yaml
@@ -11,7 +11,7 @@ type: application
 name: admission-controller
 version: 0.0.27-13
 appVersion: 0.0.27-13
-icon: https://raw.githubusercontent.com/scribe-security/misc/master/assets/logo-white.svg
+icon: https://raw.githubusercontent.com/scribe-security/misc/master/assets/logo-white.jpg
 
 maintainers:
   - name: houdini91
