--- a/charts/admission-controller/values.yaml
+++ b/charts/admission-controller/values.yaml
@@ -4,8 +4,9 @@ webhook:
   name: webhook
   image:
     repository: scribesecuriy.jfrog.io/scribe-docker-public-local/valint
-    version: v0.0.27-13-admission
+    version: latest-admission
     pullPolicy: IfNotPresent
+    authJSON: mysecret
   env: {}
   extraArgs:
     structured: true
@@ -67,7 +68,15 @@ config:
     # -- Select report sections,
     sections:
       - summary
-
+  verify:
+    input-format: statement
+  attest:
+    default: sigstore
+    cocosign:
+      storer:
+        OCI:
+          enable: true
+          repo: scribesecuriy.jfrog.io/scribe-docker-local/attestation
 
 ## common node selector for all the pods
 commonNodeSelector: {}
