--- a/charts/admission-controller/values.yaml
+++ b/charts/admission-controller/values.yaml
@@ -4,7 +4,7 @@ webhook:
   name: webhook
   image:
     repository: scribesecuriy.jfrog.io/scribe-docker-public-local/valint
-    version: v0.0.27-13-admission
+    version: v0.1.3-8-admission
     pullPolicy: IfNotPresent
   env: {}
   extraArgs:
@@ -47,12 +47,8 @@ scribe:
     client_id: ""
     # -- Scribe Client Secret
     client_secret: ""
-    # login_url: https://scribesecurity-staging.us.auth0.com
-    # audience: api.staging.scribesecurity.com
   service:
-    # -- Scribe API Url
-    url: https://api.production.scribesecurity.com
-    enable: true
+    enable: false
 
 config:
   context:
@@ -60,20 +56,25 @@ config:
     name: ""
   admission:
       # -- Select admitted images by regex
-    glob:
-      - .*nginx.*
-      - test
-  report:
-    # -- Select report sections,
-    sections:
-      - summary
-
+    # glob:
+    #   - .*nginx.*
+    #   - .*busybox.*
+  verify:
+    input-format: attest
+  attest:
+    default: sigstore
+    cocosign:
+      storer:
+        OCI:
+          enable: true
+          # repo: <your repo>
 
 ## common node selector for all the pods
 commonNodeSelector: {}
 commonTolerations: []
 
-imagePullSecrets: []
+imagePullSecrets:
+  # - <private registry access secret name>
 
 ## serviceMonitor makes metrics discoverable to prometheus
 serviceMonitor:
