--- a/charts/admission-controller/Chart.yaml
+++ b/charts/admission-controller/Chart.yaml
@@ -9,7 +9,7 @@ sources:
 type: application
 
 name: admission-controller
-version: 0.1.3-8
+version: 0.1.3
 appVersion: 0.1.3-8
 icon: https://raw.githubusercontent.com/scribe-security/misc/master/assets/logo-white.jpg
 
