--- a/charts/admission-controller/Chart.yaml
+++ b/charts/admission-controller/Chart.yaml
@@ -9,8 +9,8 @@ sources:
 type: application
 
 name: admission-controller
-version: 0.1.3
-appVersion: 0.1.3-8
+version: 0.1.3-9
+appVersion: 0.1.3-9
 icon: https://raw.githubusercontent.com/scribe-security/misc/master/assets/logo-white.jpg
 
 maintainers:
@@ -20,5 +20,5 @@ annotations:
   artifacthub.io/license: Apache-2.0
   artifacthub.io/images: |
     - name: admission-controller
-      image: scribesecuriy.jfrog.io/scribe-docker-public-local/valint@sha256:508004810ed528540877187b75d49bd938afe61264621dc590c8ade5c28f1231
+      image: scribesecuriy.jfrog.io/scribe-docker-public-local/valint@sha256:2a1726b821cf3ff0b379ce61e298ae1b47d7435371a161c07d0fb00f6e835e06
     
