--- a/charts/admission-controller/values.yaml
+++ b/charts/admission-controller/values.yaml
@@ -4,7 +4,7 @@ webhook:
   name: webhook
   image:
     repository: scribesecuriy.jfrog.io/scribe-docker-public-local/valint
-    version: v0.1.3-8-admission
+    version: v0.1.3-9-admission
     pullPolicy: IfNotPresent
   env: {}
   extraArgs:
@@ -55,8 +55,8 @@ config:
     # -- Scribe Project Key
     name: ""
   admission:
-      # -- Select admitted images by regex
-    # glob:
+    # -- Select admitted images by regex
+    glob: []
     #   - .*nginx.*
     #   - .*busybox.*
   verify:
@@ -67,14 +67,12 @@ config:
       storer:
         OCI:
           enable: true
-          # repo: <your repo>
+          ## repo: <your repo>
 
 ## common node selector for all the pods
 commonNodeSelector: {}
 commonTolerations: []
-
-imagePullSecrets:
-  # - <private registry access secret name>
+imagePullSecrets: []
 
 ## serviceMonitor makes metrics discoverable to prometheus
 serviceMonitor:
