--- a/charts/admission-controller/values.yaml
+++ b/charts/admission-controller/values.yaml
@@ -4,7 +4,7 @@ webhook:
   name: webhook
   image:
     repository: scribesecuriy.jfrog.io/scribe-docker-public-local/valint
-    version: v0.1.3-9-admission
+    version: v0.1.4-1-admission
     pullPolicy: IfNotPresent
   env: {}
   extraArgs:
@@ -60,6 +60,7 @@ config:
     #   - .*nginx.*
     #   - .*busybox.*
   verify:
+    # -- Evidence format
     input-format: attest
   attest:
     default: sigstore
@@ -72,6 +73,8 @@ config:
 ## common node selector for all the pods
 commonNodeSelector: {}
 commonTolerations: []
+
+# -- OCI evidence store secret name
 imagePullSecrets: []
 
 ## serviceMonitor makes metrics discoverable to prometheus
