--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -54,4 +54,4 @@ jobs:
         uses: helm/chart-releaser-action@v1.4.1
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-          CR_SKIP_EXISTING: true
+          # CR_SKIP_EXISTING: true  # Disabled to allow packaging all charts including new ones
