--- a/.github/workflows/auto-release.yaml
+++ b/.github/workflows/auto-release.yaml
@@ -74,12 +74,14 @@ jobs:
               echo "Manual release: Chart: $chart_name, Version: $chart_version, Tag: $tag_name"
               
               if git rev-parse "$tag_name" >/dev/null 2>&1; then
-                echo "Tag $tag_name already exists, skipping"
-              else
-                echo "Creating tag $tag_name"
-                git tag -a "$tag_name" -m "Release $chart_name version $chart_version"
-                git push origin "$tag_name"
+                echo "Tag $tag_name already exists, deleting and recreating to force release workflow"
+                git push --delete origin "$tag_name" || true
+                git tag -d "$tag_name" || true
               fi
+              
+              echo "Creating tag $tag_name"
+              git tag -a "$tag_name" -m "Release $chart_name version $chart_version [$(date)]"
+              git push origin "$tag_name"
             else
               # No specific chart - release all charts
               echo "No chart specified, releasing all charts in charts/ directory"
@@ -93,12 +95,14 @@ jobs:
                   echo "Chart: $chart_name, Version: $chart_version, Tag: $tag_name"
                   
                   if git rev-parse "$tag_name" >/dev/null 2>&1; then
-                    echo "Tag $tag_name already exists, skipping"
-                  else
-                    echo "Creating tag $tag_name"
-                    git tag -a "$tag_name" -m "Release $chart_name version $chart_version"
-                    git push origin "$tag_name"
+                    echo "Tag $tag_name already exists, deleting and recreating to force release workflow"
+                    git push --delete origin "$tag_name" || true
+                    git tag -d "$tag_name" || true
                   fi
+                  
+                  echo "Creating tag $tag_name"
+                  git tag -a "$tag_name" -m "Release $chart_name version $chart_version [$(date)]"
+                  git push origin "$tag_name"
                 fi
               done
             fi
@@ -128,14 +132,16 @@ jobs:
             
             echo "Chart: $chart_name, Version: $chart_version, Tag: $tag_name"
             
-            # Check if tag already exists
+            # Check if tag already exists - delete and recreate to force release
             if git rev-parse "$tag_name" >/dev/null 2>&1; then
-              echo "Tag $tag_name already exists, skipping"
-            else
-              echo "Creating tag $tag_name"
-              git tag -a "$tag_name" -m "Release $chart_name version $chart_version"
-              git push origin "$tag_name"
+              echo "Tag $tag_name already exists, deleting and recreating to force release workflow"
+              git push --delete origin "$tag_name" || true
+              git tag -d "$tag_name" || true
             fi
+            
+            echo "Creating tag $tag_name"
+            git tag -a "$tag_name" -m "Release $chart_name version $chart_version [$(date)]"
+            git push origin "$tag_name"
           done
 
       - name: Wait for release workflow
