--- a/.github/workflows/auto-release.yaml
+++ b/.github/workflows/auto-release.yaml
@@ -6,7 +6,7 @@ on:
     branches:
       - master
     paths:
-      - 'charts/**/Chart.yaml'
+      - 'charts/**'
   workflow_dispatch:
     inputs:
       chart_name:
